[package]
name = "rusty_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.28.6", optional = true }
rand = "0.8.5"
pixels = { version = "0.13.0", optional = true }

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

[features]
default = ["pixels"]
pixels = ["dep:winit", "dep:pixels"]
